--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
 body{
     background-color: blue;
     font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
-nav li{
-text-align: center;
+nav {
+    width: 920px;
+    margin: 0 auto;
+}
+nav ul{
+    display: flex;
+    list-style: none;
+}
+nav ul li {
+width: 150px;
+align-items: center;
+padding: 10px 8px;
+cursor: pointer;
+margin: 0 10px;
+background-color: #faf;
+color: #fff;
 }
