--- a/project/new.css
+++ b/project/new.css
@@ -41,6 +41,7 @@ body{
 .news-img  img{
     width: 100%;
     height: 500px;
+    position: relative;
 }
 a{
     color: black;
@@ -133,6 +134,13 @@ p {
     margin: auto;
     padding: 0 120px;
     margin-bottom: 50px;
+}
+.txt {
+    font-size: 64px;
+    color: #fff;
+    position: absolute; 
+    top: 30%;
+    left: 40%; 
 }
 .btn {
     width: 100%;
