--- a/project/project.css
+++ b/project/project.css
@@ -31,7 +31,7 @@ nav a:hover span{
 }
 nav {
     background-color: #f6f6f6;
-    height: 100px;
+    height: 70px;
     padding: 15px;
     display: flex;
     align-items: center;
@@ -57,8 +57,7 @@ p {
     
 }
 .menu-a {
-    margin: 100px 0px;
-    /* background-color: #fa0; */
+    margin-bottom: 150px;
 }
 .menu-a a {
     display: inline-block; /* 让a元素成为區塊元素 */
