--- a/touaki/index.css
+++ b/touaki/index.css
@@ -367,6 +367,7 @@ height: 14px;
 }
 .member-img img{
     width: 500px;
+    object-fit:fill;
 }
 .member-text{
     margin-left: 60px ;
@@ -390,7 +391,7 @@ height: 14px;
     }
     .member-img img{
         width: 100%;
-        height: 200px;
+        height: auto;
         object-position:0 55%;
         margin-bottom: 20px;
     }
