--- a/touaki/index.css
+++ b/touaki/index.css
@@ -600,6 +600,26 @@ height: 14px;
     display: flex;
     position: relative;
 }
+.top-btn{
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    height: 20px;
+}
+.footer-logo i{
+    padding-left: 35px;
+    font-size: 20px;
+    color: #fff;
+}
+.footer-logo a{
+    font-size: 12px;
+    color: #fff;
+    top: 0;
+    left: 50%;
+}
+.footer-logo a:hover{
+    opacity: 0.5;
+}
 .logo-map ,.logo-phone{
     display: flex;
     align-items: center;
