--- a/touaki/index.css
+++ b/touaki/index.css
@@ -185,7 +185,7 @@ display: none;
         width: 100%;
         font-size: 16px;
     }
-    .head nav ul li:hover{
+    .head nav ul li:hover , .head nav ul li:active{
         background-color:#EF8B32 ;
     }
     #menu{
@@ -323,7 +323,7 @@ display: none;
         text-align: left;
         width: 100%;
         position: unset;
-        margin-top: 20px;
+        margin: 20px 0px;
         order: 2;
     }
     .about-text h2{
@@ -333,8 +333,7 @@ display: none;
     }
     .lines{
         font-size: 14px;
-        margin-bottom: 20px;
-        padding-right: 10px;
+        padding:0px 10px;
     }
     
 }
@@ -588,7 +587,7 @@ height: 14px;
         font-weight: 500;
         font-family: "Red Hat Display";
     }
-    .menu-link :hover , .reserve :hover , .cafe :hover{
+    .menu-link :active , .reserve :active , .cafe :active{
         background-color: #E4AD7C;
     }
 }
@@ -617,7 +616,7 @@ height: 14px;
     top: 0;
     left: 50%;
 }
-.footer-logo a:hover{
+.footer-logo a:active{
     opacity: 0.5;
 }
 .logo-map ,.logo-phone{
