--- a/touaki/index.css
+++ b/touaki/index.css
@@ -305,6 +305,7 @@ display: none;
     position: relative;
     left:110px;
     top: 85px;
+    z-index: 20;
 }
 
 @media screen and (max-width: 767px) {
