--- a/touaki/index.css
+++ b/touaki/index.css
@@ -65,6 +65,7 @@ body{
     justify-content: center;
     background-color: #F6F6F6;
 }
+/* banner */
 .front-img {
     position: relative;
 }
@@ -593,7 +594,7 @@ height: 14px;
     }
 }
 
-
+/* 頁尾2 */
 .footer-logo {
     width: 100%;
     background-color: #1D2126;
