--- a/touaki/new.css
+++ b/touaki/new.css
@@ -271,7 +271,7 @@ p {
     padding: 10px;
     text-align: center;
 }
-/* .btn button.active{
+.btn button.active{
     background-color: #EF8B32;
 }
 .btn button{
@@ -281,7 +281,7 @@ p {
     border-radius: 20px;
     border: none;
     background-color: #F6F6F6;
-} */
+}
 .content1{
     display: block;
     text-align: left;
